<resources>
    <string name="app_name">Baby Needs</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Ajouter</string>
    <string name="item_name">Nom</string>
    <string name="article_quantity">Quantité</string>
    <string name="enter_item">Entrer l\'article</string>
    <string name="item_color">Couleur</string>
    <string name="item_size">Taille</string>
    <string name="save_button">ENREGISTRER</string>
    <string name="drop_table">DROP TABLE IF EXISTS</string>
    <string name="item_date">Date</string>
    <string name="delete_text">Are you sure?</string>
    <string name="cancel_text">cancel</string>
    <string name="delete_cfrmt_btn">delete</string>
    <string name="update_txt">Update</string>
    <string name="update_title">Modifier l\'article</string>
</resources>
