<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/enter_item"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/article_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:hint="@string/item_name"
                android:inputType="text"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/article_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/article_name"
                android:hint="@string/article_quantity"
                android:importantForAutofill="no"
                android:inputType="number" />

            <EditText
                android:id="@+id/item_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/article_quantity"
                android:hint="@string/item_color"
                android:importantForAutofill="no"
                android:inputType="text"/>

            <EditText
                android:id="@+id/item_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_color"
                android:hint="@string/item_size"
                android:importantForAutofill="no"
                android:inputType="numberSigned"/>

            <Button
                android:id="@+id/save_button"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/item_size"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/save_button"
                android:textStyle="bold|italic"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>