<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <TextView
                android:id="@+id/itr_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itr_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itr_name"
                android:paddingTop="4dp"
                android:text="@string/article_quantity"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/itr_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itr_quantity"
                android:text="@string/item_color"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/itr_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itr_color"
                android:text="@string/item_size"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/itr_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itr_size"
                android:text="@string/item_date"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/itr_date"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_alignParentRight="true">

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_menu_edit"
                    android:layout_marginRight="15dp" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_delete"
                    android:layout_marginRight="15dp" />

            </TableRow>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>